More tests and new reports

--- a/dokumentointi/cobertura/frame-packages.html
+++ b/dokumentointi/cobertura/frame-packages.html
@@ -13,10 +13,19 @@
 <td nowrap="nowrap"><a href="frame-summary.html" onclick='parent.sourceFileList.location.href="frame-sourcefiles.html"' target="summary">All</a></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a href="frame-summary-minesweeper.gui.html" onclick='parent.sourceFileList.location.href="frame-sourcefiles-minesweeper.gui.html"' target="summary">minesweeper.gui</a></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a href="frame-summary-minesweeper.logic.html" onclick='parent.sourceFileList.location.href="frame-sourcefiles-minesweeper.logic.html"' target="summary">minesweeper.logic</a></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a href="frame-summary-minesweeper.main.html" onclick='parent.sourceFileList.location.href="frame-sourcefiles-minesweeper.main.html"' target="summary">minesweeper.main</a></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a href="frame-summary-minesweeper.textui.html" onclick='parent.sourceFileList.location.href="frame-sourcefiles-minesweeper.textui.html"' target="summary">minesweeper.textui</a></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a href="frame-summary-minesweeper.util.html" onclick='parent.sourceFileList.location.href="frame-sourcefiles-minesweeper.util.html"' target="summary">minesweeper.util</a></td>
 </tr>
 </table>
 </body>
