--- a/dokumentointi/cobertura/frame-sourcefiles-minesweeper.gui.html
+++ b/dokumentointi/cobertura/frame-sourcefiles-minesweeper.gui.html
@@ -8,17 +8,20 @@
 </head>
 <body>
 <h5>
-minesweeper.main
+minesweeper.gui
 </h5>
 <div class="separator">&nbsp;</div>
 <h5>Classes</h5>
 <table width="100%">
 <tbody>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Game.html">Game</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.GamePanel.html">GamePanel</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Main.html">Main</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Gui.html">Gui</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Square.html">Square</a> <i>(0%)</i></td>
 </tr>
 </tbody>
 </table>
