--- a/dokumentointi/cobertura/frame-sourcefiles-minesweeper.util.html
+++ b/dokumentointi/cobertura/frame-sourcefiles-minesweeper.util.html
@@ -8,17 +8,14 @@
 </head>
 <body>
 <h5>
-minesweeper.main
+minesweeper.util
 </h5>
 <div class="separator">&nbsp;</div>
 <h5>Classes</h5>
 <table width="100%">
 <tbody>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Game.html">Game</a> <i>(0%)</i></td>
-</tr>
-<tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Main.html">Main</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.util.InputReader.html">InputReader</a> <i>(0%)</i></td>
 </tr>
 </tbody>
 </table>
