--- a/dokumentointi/pit/201512282055/minesweeper.logic/index.html
+++ b/dokumentointi/pit/201512282055/minesweeper.logic/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>2</td>
-            <td>100% <div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">141/141</div></div></td>
-            <td>98% <div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">133/136</div></div></td>
+            <td>3</td>
+            <td>100% <div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">168/168</div></div></td>
+            <td>94% <div class="coverage_bar"><div class="coverage_complete" style="width:94%"></div><div class="coverage_ledgend">144/153</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,15 @@
     <tbody>
 
         <tr>
+            <td><a href="./Coordinate.java.html">Coordinate.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">49/49</div></div></td>
+            <td><div class="coveragePercentage">92% </div><div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">46/50</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./GameGrid.java.html">GameGrid.java</a></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">124/124</div></div></td>
-            <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">124/127</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">102/102</div></div></td>
+            <td><div class="coveragePercentage">95% </div><div class="coverage_bar"><div class="coverage_complete" style="width:95%"></div><div class="coverage_ledgend">89/94</div></div></td>
         </tr>
 
         <tr>
