--- a/dokumentointi/cobertura/frame-sourcefiles.html
+++ b/dokumentointi/cobertura/frame-sourcefiles.html
@@ -15,10 +15,31 @@ All Packages
 <table width="100%">
 <tbody>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.logic.Coordinate.html">Coordinate</a> <i>(100%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Game.html">Game</a> <i>(0%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.logic.GameGrid.html">GameGrid</a> <i>(100%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.GamePanel.html">GamePanel</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Gui.html">Gui</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.util.InputReader.html">InputReader</a> <i>(0%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.main.Main.html">Main</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Square.html">Square</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.textui.TextGame.html">TextGame</a> <i>(0%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.logic.Tile.html">Tile</a> <i>(100%)</i></td>
