Deadline 4. Such swing, much gnashing of teeth

--- a/dokumentointi/cobertura/frame-sourcefiles-minesweeper.gui.html
+++ b/dokumentointi/cobertura/frame-sourcefiles-minesweeper.gui.html
@@ -21,7 +21,13 @@ minesweeper.gui
 <td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Gui.html">Gui</a> <i>(0%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.MineSweeperMenuBar.html">MineSweeperMenuBar</a> <i>(0%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Square.html">Square</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.StatPanel.html">StatPanel</a> <i>(0%)</i></td>
 </tr>
 </tbody>
 </table>
