--- a/dokumentointi/cobertura/frame-sourcefiles-minesweeper.util.html
+++ b/dokumentointi/cobertura/frame-sourcefiles-minesweeper.util.html
@@ -15,7 +15,7 @@ minesweeper.util
 <table width="100%">
 <tbody>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.util.InputReader.html">InputReader</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.util.Coordinate.html">Coordinate</a> <i>(100%)</i></td>
 </tr>
 </tbody>
 </table>
