--- a/dokumentointi/cobertura/frame-sourcefiles.html
+++ b/dokumentointi/cobertura/frame-sourcefiles.html
@@ -15,7 +15,10 @@ All Packages
 <table width="100%">
 <tbody>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.logic.Coordinate.html">Coordinate</a> <i>(100%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.eventhandlers.ButtonActionListener.html">ButtonActionListener</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.util.Coordinate.html">Coordinate</a> <i>(100%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.main.Game.html">Game</a> <i>(0%)</i></td>
@@ -30,16 +33,19 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Gui.html">Gui</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.util.InputReader.html">InputReader</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Main.html">Main</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.main.Main.html">Main</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.MineSweeperMenuBar.html">MineSweeperMenuBar</a> <i>(0%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.gui.Square.html">Square</a> <i>(0%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.textui.TextGame.html">TextGame</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.eventhandlers.SquareClickListener.html">SquareClickListener</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.gui.StatPanel.html">StatPanel</a> <i>(0%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="minesweeper.logic.Tile.html">Tile</a> <i>(100%)</i></td>
