--- a/dokumentointi/cobertura/frame-sourcefiles-minesweeper.eventhandlers.html
+++ b/dokumentointi/cobertura/frame-sourcefiles-minesweeper.eventhandlers.html
@@ -8,14 +8,17 @@
 </head>
 <body>
 <h5>
-minesweeper.textui
+minesweeper.eventhandlers
 </h5>
 <div class="separator">&nbsp;</div>
 <h5>Classes</h5>
 <table width="100%">
 <tbody>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="minesweeper.textui.TextGame.html">TextGame</a> <i>(0%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.eventhandlers.ButtonActionListener.html">ButtonActionListener</a> <i>(0%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="minesweeper.eventhandlers.SquareClickListener.html">SquareClickListener</a> <i>(0%)</i></td>
 </tr>
 </tbody>
 </table>
